LU-8581 osd: misuse of RCU in osd xattr cache

In osd xattr cache implementation several list operations didn't
consider RCU concurrency. Considering code complexity, switch to
use spinlock.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: If4f91353fda5aca829f8e5ef327d9c06536f625d