lustre/osd-ldiskfs/osd_handler.c
@@ -1069,79 +1069,64 @@ struct osd_xattr_entry {
 	size_t			oxe_len;
 	size_t			oxe_namelen;
 	bool			oxe_exist;
-	struct rcu_head		oxe_rcu;
 	char			oxe_buf[0];
 };
 
-static struct osd_xattr_entry *osd_oxc_lookup(struct osd_object *obj,
-					      const char *name,
-					      size_t namelen)
+static int osd_oxc_get(struct osd_object *obj, const char *name,
+		       struct lu_buf *buf)
+{
+	struct osd_xattr_entry *tmp;
+	struct osd_xattr_entry *oxe = NULL;
+	size_t namelen = strlen(name);
+	int rc;
+	ENTRY;
+
+	spin_lock(&obj->oo_guard);
+	list_for_each_entry(tmp, &obj->oo_xattr_list, oxe_list) {
+		if (namelen == tmp->oxe_namelen &&
+		    strncmp(name, tmp->oxe_buf, namelen) == 0) {
+			oxe = tmp;
+			break;
+		}
+	}
+
+	if (oxe == NULL)
+		GOTO(out, rc = -ENOENT);
+
+	if (!oxe->oxe_exist)
+		GOTO(out, rc = -ENODATA);
+
+	/* vallen */
+	rc = oxe->oxe_len -
+	     offsetof(struct osd_xattr_entry, oxe_buf[namelen + 1]);
+	LASSERT(rc > 0);
+
+	if (buf->lb_buf == NULL)
+		GOTO(out, rc);
+
+	if (buf->lb_len < rc)
+		GOTO(out, rc = -ERANGE);
+
+	memcpy(buf->lb_buf, &oxe->oxe_buf[namelen + 1], rc);
+	EXIT;
+out:
+	spin_unlock(&obj->oo_guard);
+
+	return rc;
+}
+
+static inline void __osd_oxc_del(struct osd_object *obj, const char *name,
+				 size_t namelen)
 {
 	struct osd_xattr_entry *oxe;
 
 	list_for_each_entry(oxe, &obj->oo_xattr_list, oxe_list) {
 		if (namelen == oxe->oxe_namelen &&
-		    strncmp(name, oxe->oxe_buf, namelen) == 0)
-			return oxe;
-	}
-
-	return NULL;
-}
-
-static int osd_oxc_get(struct osd_object *obj, const char *name,
-		       struct lu_buf *buf)
-{
-	struct osd_xattr_entry *oxe;
-	size_t vallen;
-	ENTRY;
-
-	rcu_read_lock();
-	oxe = osd_oxc_lookup(obj, name, strlen(name));
-	if (oxe == NULL) {
-		rcu_read_unlock();
-		RETURN(-ENOENT);
-	}
-
-	if (!oxe->oxe_exist) {
-		rcu_read_unlock();
-		RETURN(-ENODATA);
-	}
-
-	vallen = oxe->oxe_len - sizeof(*oxe) - oxe->oxe_namelen - 1;
-	LASSERT(vallen > 0);
-
-	if (buf->lb_buf == NULL) {
-		rcu_read_unlock();
-		RETURN(vallen);
-	}
-
-	if (buf->lb_len < vallen) {
-		rcu_read_unlock();
-		RETURN(-ERANGE);
-	}
-
-	memcpy(buf->lb_buf, oxe->oxe_buf + oxe->oxe_namelen + 1, vallen);
-	rcu_read_unlock();
-
-	RETURN(vallen);
-}
-
-static void osd_oxc_free(struct rcu_head *head)
-{
-	struct osd_xattr_entry *oxe;
-
-	oxe = container_of(head, struct osd_xattr_entry, oxe_rcu);
-	OBD_FREE(oxe, oxe->oxe_len);
-}
-
-static inline void __osd_oxc_del(struct osd_object *obj, const char *name)
-{
-	struct osd_xattr_entry *oxe;
-
-	oxe = osd_oxc_lookup(obj, name, strlen(name));
-	if (oxe != NULL) {
-		list_del(&oxe->oxe_list);
-		call_rcu(&oxe->oxe_rcu, osd_oxc_free);
+		    strncmp(name, oxe->oxe_buf, namelen) == 0) {
+			list_del(&oxe->oxe_list);
+			OBD_FREE(oxe, oxe->oxe_len);
+			return;
+		}
 	}
 }
 
@@ -1170,7 +1155,7 @@ static void osd_oxc_add(struct osd_object *obj, const char *name,
 
 	/* this should be rarely called, just remove old and add new */
 	spin_lock(&obj->oo_guard);
-	__osd_oxc_del(obj, name);
+	__osd_oxc_del(obj, name, namelen);
 	list_add_tail(&oxe->oxe_list, &obj->oo_xattr_list);
 	spin_unlock(&obj->oo_guard);
 }
@@ -1178,7 +1163,7 @@ static void osd_oxc_add(struct osd_object *obj, const char *name,
 static void osd_oxc_del(struct osd_object *obj, const char *name)
 {
 	spin_lock(&obj->oo_guard);
-	__osd_oxc_del(obj, name);
+	__osd_oxc_del(obj, name, strlen(name));
 	spin_unlock(&obj->oo_guard);
 }
 
